manifests/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: "/jenkins"
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
